--- a/fakestore-app/src/App.css
+++ b/fakestore-app/src/App.css
@@ -1,18 +1,11 @@
-:root,
-[data-bs-theme],
-[data-bs-theme="light"],
-[data-bs-theme="dark"] {
-  --bs-body-bg: #2d2d2d;
-  --bs-body-color: #f1f1f1;
-}
+
 
 html, body, #root {
-  min-height: 100%;
+  min-height: 90%;
 }
 
 body {
-  background-color: var(--bs-body-bg) !important; /* belt + suspenders */
-  color: var(--bs-body-color) !important;
+  background-color: #2d2d2d;
 }
 
 
